Editing of an item works.
